# movement-hack

./: .gitignore  Dockerfile.movement-dev  LICENSE-MIT  Move.toml  PULL_REQUEST_TEMPLATE.md  README.md  amplify.yaml  amplify.yml  amplify_old.yml  cargo-generate.toml  package.json
.devcontainer/anchor/: Dockerfile  devcontainer.json
.devcontainer/aptos/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/book/: Dockerfile  devcontainer.json
.devcontainer/maintainer/: Dockerfile  devcontainer.json
.devcontainer/move/: devcontainer.json
.devcontainer/movement/: Dockerfile  Dockerfile.builder  devcontainer.json  docker-compose.yml
.devcontainer/movement-dev/: Dockerfile  devcontainer.json
.devcontainer/solidity/: Dockerfile  devcontainer.json
.github/workflows/: Dockerfile  aws-amplify-deploy.yaml  citest.yaml  examples_tests.yaml
abin/: test.sh  update_container.sh
book/: .gitignore  book.toml
book/book/: 404.html  Prologue.html  book.js  ch00-00-introduction.html  ch01-00-history-of-move.html  ch01-01-the-language.html  ch01-02-dispersion-of-move.html  ch01-03-enter-movement.html  ch02-00-getting-started-with-move.html  ch02-01-advantages-of-move.html  ch02-02-install-movement-cli.html  ch02-03-hello-move.html  ch03-00-domain-modeling.html  ch03-01-domain-modeling-intro.html  ch03-02-user-journey.html  ch03-03-architectural-diagram.html  (+16 more)
examples_nursery/: README.md
examples_nursery/anchor/multicontract_fib/programs/multicontract_fib/: Cargo.toml
examples_nursery/anchor/multicontract_fib/programs/multicontract_fib/src/: lib.rs
(+167 files in other folders)
